Refactored code from ClientFrame to new classes representing tabs.
Code has been moved from the main frame class to the classes responsible
for displaying the view of a particular tab. Every tab will have its own
class.